--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,34 @@
 #release configuration
-#Thu May 13 08:30:53 CDT 2021
+#Thu May 13 08:34:23 CDT 2021
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-remoteTagging=true
-scm.commentPrefix=[maven-release-plugin] 
+project.dev.se.magnus.microservices.core.product\:review-service=0.0.2-SNAPSHOT
+project.dev.se.magnus.microservices.core.product\:product-service=0.0.2-SNAPSHOT
+project.scm.se.magnus.microservices.core.product\:product-microservices-parent.tag=HEAD
+project.rel.se.magnus.microservices.core.product\:product-microservices-parent=1.0.0
+project.rel.se.magnus.microservices.core.product\:product-service=0.0.1
+project.rel.se.magnus.microservices.core.product\:util=0.0.1
+project.rel.se.magnus.microservices.core.product\:review-service=0.0.1
 pushChanges=true
-completedPhase=check-poms
+project.rel.se.magnus.microservices.core.product\:recommendation-service=0.0.1
+project.dev.se.magnus.microservices.core.product\:recommendation-service=0.0.2-SNAPSHOT
+project.scm.se.magnus.microservices.core.product\:review-service.empty=true
+remoteTagging=true
+project.dev.se.magnus.microservices.core.product\:api=0.0.2-SNAPSHOT
+scm.commentPrefix=[maven-release-plugin] 
+project.scm.se.magnus.microservices.core.product\:api.empty=true
+project.rel.se.magnus.microservices.core.product\:api=0.0.1
+project.scm.se.magnus.microservices.core.product\:util.empty=true
+project.dev.se.magnus.microservices.core.product\:util=0.0.2-SNAPSHOT
+project.dev.se.magnus.microservices.core.product\:product-composite-service=0.0.2-SNAPSHOT
+completedPhase=generate-release-poms
+project.scm.se.magnus.microservices.core.product\:product-service.empty=true
 scm.url=scm\:git\:https\://github.com/vikaswarkar/my-packt.git
+project.scm.se.magnus.microservices.core.product\:recommendation-service.empty=true
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+project.dev.se.magnus.microservices.core.product\:product-microservices-parent=1.0.1-SNAPSHOT
+project.rel.se.magnus.microservices.core.product\:product-composite-service=0.0.1
+project.scm.se.magnus.microservices.core.product\:product-composite-service.empty=true
+scm.tag=product-microservices-parent-1.0.0
+project.scm.se.magnus.microservices.core.product\:product-microservices-parent.developerConnection=scm\:git\:https\://github.com/vikaswarkar/my-packt.git
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
