--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,24 +7,31 @@ services:
     environment: 
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
-      - mongodb
-    
+      mongodb:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
   recommendation:
     build: microservices/recommendation-service
     mem_limit: 350m
     environment: 
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
-      - mongodb 
+      mongodb:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
     
+
   review:
     build: microservices/review-service
     mem_limit: 350m
     environment: 
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
-      - mysql
-#        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
 
   product-composite:
     build: microservices/product-composite-service
@@ -34,7 +41,7 @@ services:
     depends_on: 
       - product
       - recommendation
-      - review          
+      - review
     ports: 
       - "8080:8080"
   
@@ -44,22 +51,45 @@ services:
     ports:
       - "27017:27017"
     command: mongod --smallfiles
+    healthcheck:
+      test: "mongo --eval 'db.stats().ok'"
+      interval: 10s
+      timeout: 5s
+      retries: 10
     
+
   mysql:
     image: mysql:5.7
+    restart: always
     mem_limit: 350m
     ports:
       - "3306:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=rootpwd
-      - MYSQL_DATABASE=review-db
-      - MYSQL_USER=user
-      - MYSQL_PASSWORD=pwd
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: review-db
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+#    healthcheck:
+#      test: ["CMD", "mysqladmin", "ping", "-uuser", "ppwd", "-h", "localhost"]
+#      interval: 1000s
+#      timeout: 5s
+#      retries: 10
+      
+
+  rabbitmq:
+    image: rabbitmq:3.7.8-management
+    mem_limit: 350m
+    ports:
+    - 5672:5672
+    - 15672:15672
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-uuser", "ppwd", "-h", "localhost"]
+      test: ["CMD", "rabbitmqctl", "status"]
       interval: 10s
       timeout: 5s
       retries: 10
-      
-          
-  
+
+#  eureka:
+#    build: spring-cloud/eureka-server
+#    mem_limit: 350m
+#    ports:
+#    - "8761:8761"
