--- a/microservices/product-composite-service/src/main/resources/application.yml
+++ b/microservices/product-composite-service/src/main/resources/application.yml
@@ -15,36 +15,45 @@ api:
 
   product-composite:
 
-    get-composite-product:
-      description: Returns a composite view of the specified product id
-      notes: |
-        # Normal response
-        If the requested product id is found the method will return information regarding:
-        1. Base product information
-        1. Reviews
-        1. Recommendations
-        1. Service Addresses\n(technical information regarding the addresses of the microservices that created the response)
+get-composite-product:
+  description: Returns a composite view of the specified product id
+  notes: |
+    # Normal response
+    If the requested product id is found the method will return information regarding:
+    1. Product information
+    1. Reviews
+    1. Recommendations
+    1. Service Addresses
+    (technical information regarding the addresses of the microservices that created the response)
 
-        # Expected partial and error responses
-        In the following cases, only a partial response be created (used to simplify testing of error conditions)
+    # Expected partial and error responses
+    1. If no product information is found, a <b>404 - Not Found</b> error will be returned
+    1. In no recommendations or reviews are found for a product, a partial response will be returned
 
-        ## Product id 113
-        200 - Ok, but no recommendations will be returned
+  create-composite-product:
+    description: Creates a composite product
+    notes: |
+      # Normal response
+      The composite product information posted to the API will be splitted up and stored as separate product-info, recommendation and review entities.
 
-        ## Product id 213
-        200 - Ok, but no reviews will be returned
+      # Expected error responses
+      1. If a product with the same productId as specified in the posted information already exists,
+         an <b>422 - Unprocessable Entity</b> error with a "duplicate key" error message will be returned
 
-        ## Non numerical product id
-        400 - A <b>Bad Request</b> error will be returned
-
-        ## Product id 13
-        404 - A <b>Not Found</b> error will be returned
-
-        ## Negative product ids
-        422 - An <b>Unprocessable Entity</b> error will be returned
+  delete-composite-product:
+    description: Deletes a product composite
+    notes: |
+      # Normal response
+      Entities for product information, recommendations and reviews related to the specificed productId will be deleted.
+      The implementation of the delete method is idempotent, i.e. it can be called several times with the same response.
+      This means that a delete request of a non existing product will return <b>200 Ok</b>.
         
 server.port: 7000
 
+# These values are injected in the integration service.
+# These values are not used any more in the cloud environment, as the eureka client will
+#  retrieve the actual instances of the core services from the eureka server
+# based of the app-name(virtual name)
 app:
   product-service:
     host: localhost
@@ -61,7 +70,51 @@ logging:
     root: INFO
     se.magnus: DEBUG
 
+spring:
+  cloud:
+    stream:
+      default-binder: rabbit
+      default.contentType: application/json
+      bindings:
+        output-products:
+          destination: products
+          producer:
+            required-groups: auditGroup
+        output-recommendations:
+          destination: recommendations
+          producer:
+            required-groups: auditGroup
+        output-reviews:
+          destination: reviews
+          producer:
+            required-groups: auditGroup
+      kafka:
+        binder:
+          brokers: localhost
+          defaultBrokerPport: 9092
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
+
+management.endpoint.health.show-details: "ALWAYS"
+management.endpoints.web.exposure.include: "*"
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+    initialInstanceInfoReplicationIntervalSeconds: 5
+    registryFetchIntervalSeconds: 5
+  instance:
+    leaseRenewalIntervalInSeconds: 5
+    leaseExpirationDurationInSeconds: 5
+
+ribbon.ServerListRefreshInterval: 5000
+
+ribbon.NFLoadBalancerPingInterval: 5
 ---
 
 spring.profiles: docker
@@ -78,4 +131,10 @@ app:
     port: 8080
   review-service:
     host: review
-    port: 8080  
+    port: 8080
+
+spring.rabbitmq.host: rabbitmq
+
+spring.cloud.stream.kafka.binder.brokers: kafka
+
+eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka/
