--- a/microservices/recommendation-service/src/main/resources/application.yml
+++ b/microservices/recommendation-service/src/main/resources/application.yml
@@ -52,11 +52,11 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
-#    initialInstanceInfoReplicationIntervalSeconds: 5
-#    registryFetchIntervalSeconds: 5
-#  instance:
-#    leaseRenewalIntervalInSeconds: 5
-#    leaseExpirationDurationInSeconds: 5
+    initialInstanceInfoReplicationIntervalSeconds: 5
+    registryFetchIntervalSeconds: 5
+  instance:
+    leaseRenewalIntervalInSeconds: 5
+    leaseExpirationDurationInSeconds: 5
 ---
 
 spring.profiles: docker
