Removed Reactive and Async Code.

--- a/microservices/review-service/pom.xml
+++ b/microservices/review-service/pom.xml
@@ -5,27 +5,17 @@
 	<parent>
 		<groupId>se.magnus.microservices.core.product</groupId>
 		<artifactId>product-microservices-parent</artifactId>
-		<version>1.0.0</version>
+		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>review-service</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>Review Service</name>
 	<description>Review Microservice</description>
 
 
 	<dependencies>
-
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-stream-rabbit</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-stream-kafka</artifactId>
-		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -40,13 +30,13 @@
 		<dependency>
 			<groupId>se.magnus.microservices.core.product</groupId>
 			<artifactId>util</artifactId>
-			<version>0.0.1</version>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>se.magnus.microservices.core.product</groupId>
 			<artifactId>api</artifactId>
-			<version>0.0.1</version>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
