Removed some dependencies that were added for the app to work with java 11

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - product
       - recommendation
       - review
-    ports: 
+    ports:
       - "8080:8080"
   
   mongodb:
@@ -71,3 +71,11 @@ services:
     mem_limit: 350m
     ports:
     - "8761:8761"
+
+  gateway:
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    build: spring-cloud/gateway
+    mem_limit: 350m
+    ports:
+    - "8080:8080"
