--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,8 @@ services:
       - product
       - recommendation
       - review
-    ports:
-      - "8080:8080"
+#    ports:
+#      - "8080:8080"
   
   mongodb:
     image: mongo:3.6.9
@@ -69,8 +69,8 @@ services:
   eureka:
     build: spring-cloud/eureka-server
     mem_limit: 350m
-    ports:
-    - "8761:8761"
+#    ports:
+#    - "8761:8761"
 
   gateway:
     environment:
