--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <module>api</module>
         <module>util</module>
         <module>spring-cloud/eureka-server</module>
-<!--        <module>spring-cloud/gateway</module>-->
+        <module>spring-cloud/gateway</module>
     </modules>
 
     <dependencies>
