--- a/microservices/review-service/src/main/resources/application.yml
+++ b/microservices/review-service/src/main/resources/application.yml
@@ -32,7 +32,7 @@ management.endpoints.web.exposure.include: "*"
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: "http://${app.eureka-username}:${app.eureka-password}@${app.eureka-server}:8761/eureka/"
     initialInstanceInfoReplicationIntervalSeconds: 5
     registryFetchIntervalSeconds: 5
   instance:
@@ -40,6 +40,10 @@ eureka:
     leaseExpirationDurationInSeconds: 5
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
+app:
+  eureka-username: user
+  eureka-password: password
+  eureka-server: localhost
 ---
 
 spring.profiles: docker
@@ -51,4 +55,5 @@ spring:
 server:
   port: 8080
 
-eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka/
+app:
+  eureka-server: eureka
