--- a/microservices/recommendation-service/src/main/resources/application.yml
+++ b/microservices/recommendation-service/src/main/resources/application.yml
@@ -1,4 +1,5 @@
-server.port: ${PORT:0}
+server.port: 7003
+
 logging:
   level:
     root: INFO
@@ -33,6 +34,12 @@ app:
   eureka-username: user
   eureka-password: password
   eureka-server: localhost
+---
+
+spring.profiles: eureka
+
+server.port: ${PORT:0}
+
 ---
 
 spring.profiles: docker
