--- a/microservices/product-service/src/main/resources/application.yml
+++ b/microservices/product-service/src/main/resources/application.yml
@@ -1,4 +1,5 @@
-server.port: ${PORT:0}
+server.port: 7001
+
 logging:
   level:
     root: INFO
@@ -32,6 +33,13 @@ app:
   eureka-username: user
   eureka-password: password
   eureka-server: localhost
+
+---
+
+spring.profiles: eureka
+
+server.port: ${PORT:0}
+
 ---
 
 spring.profiles: docker
