--- a/microservices/product-composite-service/pom.xml
+++ b/microservices/product-composite-service/pom.xml
@@ -48,6 +48,12 @@
 <!--		</dependency>-->
 
 		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
